// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lightning-grouped-combobox is accessible renders alternative text for icon 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-74"
    >
      List Box Example
    </label>
    <lightning-helptext>
      #shadow-root(open)
        <pre>
          help help
           
          utility:info
        </pre>
    </lightning-helptext>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-74"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-74"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                      <span
                        class="slds-assistive-text"
                      >
                        Alternative Icon Text
                      </span>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-74"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox renders properly can be disabled 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-7"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-7"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  disabled=""
                  id="input-7"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-7"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox renders properly with dropdown open 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-11"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-activedescendant="input-11-0-11"
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-11"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-11"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-11"
                role="listbox"
              >
                <lightning-base-combobox-item
                  aria-selected="true"
                  class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain slds-has-focus"
                  data-item-id="input-11-0"
                  data-value="actionSearchAdvanced"
                  id="input-11-0-11"
                  role="option"
                >
                  #shadow-root(open)
                    <span
                      class="slds-media__figure slds-listbox__option-icon"
                    >
                      <lightning-icon
                        class="slds-icon-utility-search slds-icon_container"
                      >
                        #shadow-root(open)
                          <lightning-primitive-icon>
                            #shadow-root(open)
                              <svg
                                aria-hidden="true"
                                class="slds-icon slds-icon-text-default slds-icon_x-small"
                                data-key="search"
                                focusable="false"
                              >
                                <use
                                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                                />
                              </svg>
                          </lightning-primitive-icon>
                      </lightning-icon>
                    </span>
                    <span
                      class="slds-media__body"
                    >
                      <span
                        class="slds-truncate"
                        title="Advanced Search..."
                      >
                        Advanced Search...
                      </span>
                    </span>
                </lightning-base-combobox-item>
                <lightning-base-combobox-item
                  aria-selected="false"
                  class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
                  data-item-id="input-11-1"
                  data-value="accountGlobalMedia"
                  id="input-11-1-11"
                  role="option"
                >
                  #shadow-root(open)
                    <span
                      class="slds-media__figure"
                    >
                      <lightning-icon
                        class="slds-icon-standard-account slds-icon_container"
                      >
                        #shadow-root(open)
                          <lightning-primitive-icon>
                            #shadow-root(open)
                              <svg
                                aria-hidden="true"
                                class="slds-icon slds-icon_small"
                                data-key="account"
                                focusable="false"
                              >
                                <use
                                  xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                />
                              </svg>
                          </lightning-primitive-icon>
                      </lightning-icon>
                    </span>
                    <span
                      class="slds-media__body"
                    >
                      <span
                        class="slds-listbox__option-text slds-listbox__option-text_entity"
                      >
                        <span
                          class="slds-truncate"
                          title="Global Media"
                        >
                          Global Media
                        </span>
                      </span>
                      <span
                        class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                      >
                        <span
                          class="slds-truncate"
                          title="(905) 555-1212"
                        >
                          (905) 555-1212
                        </span>
                      </span>
                    </span>
                </lightning-base-combobox-item>
              </div>
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox renders properly with field level help 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-26"
    >
      List Box Example
    </label>
    <lightning-helptext>
      #shadow-root(open)
        <pre>
          help help
           
          utility:info
        </pre>
    </lightning-helptext>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-26"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-26"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-26"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox renders properly with items 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-3"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-3"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-3"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-3"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox renders properly with maxlength 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-21"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-21"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-21"
                  maxlength="50"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-21"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox renders properly with spinnerActive, but only if it's set 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-30"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-30"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-30"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-30"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox renders properly with spinnerActive, but only if it's set 2`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-30"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-30"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-30"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-30"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox shows errors shows custom errors 1`] = `
<lightning-grouped-combobox
  class="slds-form-element slds-has-error"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-78"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-78"
                  aria-describedby="help-message-77"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-78"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-78"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
    <div
      aria-live="assertive"
      class="slds-form-element__help"
      data-help-message="true"
      id="help-message-77"
    >
      Unknown error
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox triggers events triggers closing dropdown with escape key 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-164"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-activedescendant="input-164-0-164"
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-164"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-164"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-164"
                role="listbox"
              >
                <lightning-base-combobox-item
                  aria-selected="true"
                  class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain slds-has-focus"
                  data-item-id="input-164-0"
                  data-value="actionSearchAdvanced"
                  id="input-164-0-164"
                  role="option"
                >
                  #shadow-root(open)
                    <span
                      class="slds-media__figure slds-listbox__option-icon"
                    >
                      <lightning-icon
                        class="slds-icon-utility-search slds-icon_container"
                      >
                        #shadow-root(open)
                          <lightning-primitive-icon>
                            #shadow-root(open)
                              <svg
                                aria-hidden="true"
                                class="slds-icon slds-icon-text-default slds-icon_x-small"
                                data-key="search"
                                focusable="false"
                              >
                                <use
                                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                                />
                              </svg>
                          </lightning-primitive-icon>
                      </lightning-icon>
                    </span>
                    <span
                      class="slds-media__body"
                    >
                      <span
                        class="slds-truncate"
                        title="Advanced Search..."
                      >
                        Advanced Search...
                      </span>
                    </span>
                </lightning-base-combobox-item>
                <lightning-base-combobox-item
                  aria-selected="false"
                  class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
                  data-item-id="input-164-1"
                  data-value="accountGlobalMedia"
                  id="input-164-1-164"
                  role="option"
                >
                  #shadow-root(open)
                    <span
                      class="slds-media__figure"
                    >
                      <lightning-icon
                        class="slds-icon-standard-account slds-icon_container"
                      >
                        #shadow-root(open)
                          <lightning-primitive-icon>
                            #shadow-root(open)
                              <svg
                                aria-hidden="true"
                                class="slds-icon slds-icon_small"
                                data-key="account"
                                focusable="false"
                              >
                                <use
                                  xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                />
                              </svg>
                          </lightning-primitive-icon>
                      </lightning-icon>
                    </span>
                    <span
                      class="slds-media__body"
                    >
                      <span
                        class="slds-listbox__option-text slds-listbox__option-text_entity"
                      >
                        <span
                          class="slds-truncate"
                          title="Global Media"
                        >
                          Global Media
                        </span>
                      </span>
                      <span
                        class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                      >
                        <span
                          class="slds-truncate"
                          title="(905) 555-1212"
                        >
                          (905) 555-1212
                        </span>
                      </span>
                    </span>
                </lightning-base-combobox-item>
              </div>
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox triggers events triggers closing dropdown with escape key 2`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-164"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
          data-position-id="lgcp-1000021"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-164"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  data-position-id="lgcp-1000022"
                  id="input-164"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                data-position-id="lgcp-1000023"
                id="dropdown-element-164"
                role="listbox"
                style="position: absolute; z-index: 7007; left: -9999px; top: 0px;"
              >
                <lightning-base-combobox-item
                  aria-selected="false"
                  class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
                  data-item-id="input-164-0"
                  data-value="actionSearchAdvanced"
                  id="input-164-0-164"
                  role="option"
                >
                  #shadow-root(open)
                    <span
                      class="slds-media__figure slds-listbox__option-icon"
                    >
                      <lightning-icon
                        class="slds-icon-utility-search slds-icon_container"
                      >
                        #shadow-root(open)
                          <lightning-primitive-icon>
                            #shadow-root(open)
                              <svg
                                aria-hidden="true"
                                class="slds-icon slds-icon-text-default slds-icon_x-small"
                                data-key="search"
                                focusable="false"
                              >
                                <use
                                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                                />
                              </svg>
                          </lightning-primitive-icon>
                      </lightning-icon>
                    </span>
                    <span
                      class="slds-media__body"
                    >
                      <span
                        class="slds-truncate"
                        title="Advanced Search..."
                      >
                        Advanced Search...
                      </span>
                    </span>
                </lightning-base-combobox-item>
                <lightning-base-combobox-item
                  aria-selected="false"
                  class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
                  data-item-id="input-164-1"
                  data-value="accountGlobalMedia"
                  id="input-164-1-164"
                  role="option"
                >
                  #shadow-root(open)
                    <span
                      class="slds-media__figure"
                    >
                      <lightning-icon
                        class="slds-icon-standard-account slds-icon_container"
                      >
                        #shadow-root(open)
                          <lightning-primitive-icon>
                            #shadow-root(open)
                              <svg
                                aria-hidden="true"
                                class="slds-icon slds-icon_small"
                                data-key="account"
                                focusable="false"
                              >
                                <use
                                  xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                />
                              </svg>
                          </lightning-primitive-icon>
                      </lightning-icon>
                    </span>
                    <span
                      class="slds-media__body"
                    >
                      <span
                        class="slds-listbox__option-text slds-listbox__option-text_entity"
                      >
                        <span
                          class="slds-truncate"
                          title="Global Media"
                        >
                          Global Media
                        </span>
                      </span>
                      <span
                        class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                      >
                        <span
                          class="slds-truncate"
                          title="(905) 555-1212"
                        >
                          (905) 555-1212
                        </span>
                      </span>
                    </span>
                </lightning-base-combobox-item>
              </div>
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox with a pill should render a pill when a pill is set 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-48"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_left-right"
                role="none"
              >
                <lightning-icon
                  class="slds-icon-standard-account slds-icon_container slds-combobox__input-entity-icon"
                >
                  #shadow-root(open)
                    <lightning-primitive-icon>
                      #shadow-root(open)
                        <svg
                          aria-hidden="true"
                          class="slds-icon slds-icon_x-small"
                          data-key="account"
                          focusable="false"
                        >
                          <use
                            xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                          />
                        </svg>
                    </lightning-primitive-icon>
                    <span
                      class="slds-assistive-text"
                    >
                      Account
                    </span>
                </lightning-icon>
                <input
                  aria-controls="dropdown-element-48"
                  autocomplete="off"
                  class="slds-input slds-combobox__input slds-combobox__input-value"
                  id="input-48"
                  placeholder="Some Choice"
                  readonly=""
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <button
                    class="slds-button slds-button_icon slds-input__icon slds-input__icon_right"
                    title="Clear Selection"
                    type="button"
                  >
                    <lightning-primitive-icon>
                      #shadow-root(open)
                        <svg
                          aria-hidden="true"
                          class="slds-button__icon"
                          data-key="close"
                          focusable="false"
                        >
                          <use
                            xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#close"
                          />
                        </svg>
                    </lightning-primitive-icon>
                    <span
                      class="slds-assistive-text"
                    >
                      Clear Selection
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-48"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox with empty items won't open dropdown 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-34"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="false"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-34"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-34"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-34"
                role="listbox"
              />
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;

exports[`lightning-grouped-combobox with items when groups are passed amd dropdown is open 1`] = `
<lightning-grouped-combobox
  class="slds-form-element"
>
  #shadow-root(open)
    <label
      class="slds-form-element__label"
      data-main-label="true"
      for="input-90"
    >
      List Box Example
    </label>
    <div
      class="slds-form-element__control"
    >
      <div>
        <lightning-base-combobox
          class="slds-combobox_container"
          data-lookup="true"
        >
          #shadow-root(open)
            <div
              aria-expanded="true"
              aria-haspopup="listbox"
              class="slds-combobox slds-dropdown-trigger slds-dropdown-trigger_click slds-is-open"
              role="combobox"
            >
              <div
                class="slds-combobox__form-element slds-input-has-icon slds-input-has-icon_right"
                role="none"
              >
                <input
                  aria-activedescendant="input-90-5-90"
                  aria-autocomplete="list"
                  aria-controls="dropdown-element-90"
                  autocomplete="off"
                  class="slds-input slds-combobox__input"
                  id="input-90"
                  placeholder="Select an Item"
                  role="textbox"
                  type="text"
                />
                <div
                  class="slds-input__icon-group slds-input__icon-group_right"
                >
                  <lightning-icon
                    class="slds-icon-utility-search slds-input__icon slds-input__icon_right slds-icon_container"
                  >
                    #shadow-root(open)
                      <lightning-primitive-icon>
                        #shadow-root(open)
                          <svg
                            aria-hidden="true"
                            class="slds-icon slds-icon-text-default slds-icon_x-small"
                            data-key="search"
                            focusable="false"
                          >
                            <use
                              xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                            />
                          </svg>
                      </lightning-primitive-icon>
                  </lightning-icon>
                </div>
              </div>
              <div
                class="slds-listbox slds-listbox_vertical slds-dropdown slds-dropdown_fluid slds-dropdown_length-with-icon-10 slds-dropdown_left"
                data-dropdown-element="true"
                id="dropdown-element-90"
                role="listbox"
              >
                <lightning-base-combobox-item
                  aria-selected="false"
                  class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
                  data-item-id="input-90-0"
                  data-value="actionSearchAdvanced"
                  id="input-90-0-90"
                  role="option"
                >
                  #shadow-root(open)
                    <span
                      class="slds-media__figure slds-listbox__option-icon"
                    >
                      <lightning-icon
                        class="slds-icon-utility-search slds-icon_container"
                      >
                        #shadow-root(open)
                          <lightning-primitive-icon>
                            #shadow-root(open)
                              <svg
                                aria-hidden="true"
                                class="slds-icon slds-icon-text-default slds-icon_x-small"
                                data-key="search"
                                focusable="false"
                              >
                                <use
                                  xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                                />
                              </svg>
                          </lightning-primitive-icon>
                      </lightning-icon>
                    </span>
                    <span
                      class="slds-media__body"
                    >
                      <span
                        class="slds-truncate"
                        title="Advanced Search..."
                      >
                        Advanced Search...
                      </span>
                    </span>
                </lightning-base-combobox-item>
                <ul
                  role="group"
                >
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <lightning-base-combobox-item
                      aria-selected="false"
                      class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
                      data-item-id="input-90-1"
                      data-value="actionSearchAdvanced"
                      id="input-90-1-90"
                      role="option"
                    >
                      #shadow-root(open)
                        <span
                          class="slds-media__figure slds-listbox__option-icon"
                        >
                          <lightning-icon
                            class="slds-icon-utility-search slds-icon_container"
                          >
                            #shadow-root(open)
                              <lightning-primitive-icon>
                                #shadow-root(open)
                                  <svg
                                    aria-hidden="true"
                                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                                    data-key="search"
                                    focusable="false"
                                  >
                                    <use
                                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                                    />
                                  </svg>
                              </lightning-primitive-icon>
                          </lightning-icon>
                        </span>
                        <span
                          class="slds-media__body"
                        >
                          <span
                            class="slds-truncate"
                            title="Advanced Search..."
                          >
                            Advanced Search...
                          </span>
                        </span>
                    </lightning-base-combobox-item>
                  </li>
                </ul>
                <ul
                  aria-label="Group 1"
                  role="group"
                >
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <div
                      class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                      role="presentation"
                    >
                      <h3
                        class="slds-text-title_caps"
                        role="presentation"
                        title="Group 1"
                      >
                        Group 1
                      </h3>
                    </div>
                  </li>
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <lightning-base-combobox-item
                      aria-selected="false"
                      class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
                      data-item-id="input-90-2"
                      data-value="accountGlobalMedia"
                      id="input-90-2-90"
                      role="option"
                    >
                      #shadow-root(open)
                        <span
                          class="slds-media__figure"
                        >
                          <lightning-icon
                            class="slds-icon-standard-account slds-icon_container"
                          >
                            #shadow-root(open)
                              <lightning-primitive-icon>
                                #shadow-root(open)
                                  <svg
                                    aria-hidden="true"
                                    class="slds-icon slds-icon_small"
                                    data-key="account"
                                    focusable="false"
                                  >
                                    <use
                                      xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                    />
                                  </svg>
                              </lightning-primitive-icon>
                          </lightning-icon>
                        </span>
                        <span
                          class="slds-media__body"
                        >
                          <span
                            class="slds-listbox__option-text slds-listbox__option-text_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="Global Media"
                            >
                              Global Media
                            </span>
                          </span>
                          <span
                            class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="(905) 555-1212"
                            >
                              (905) 555-1212
                            </span>
                          </span>
                        </span>
                    </lightning-base-combobox-item>
                  </li>
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <lightning-base-combobox-item
                      aria-selected="false"
                      class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
                      data-item-id="input-90-3"
                      data-value="accountGlobalMedia"
                      id="input-90-3-90"
                      role="option"
                    >
                      #shadow-root(open)
                        <span
                          class="slds-media__figure"
                        >
                          <lightning-icon
                            class="slds-icon-standard-account slds-icon_container"
                          >
                            #shadow-root(open)
                              <lightning-primitive-icon>
                                #shadow-root(open)
                                  <svg
                                    aria-hidden="true"
                                    class="slds-icon slds-icon_small"
                                    data-key="account"
                                    focusable="false"
                                  >
                                    <use
                                      xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                    />
                                  </svg>
                              </lightning-primitive-icon>
                          </lightning-icon>
                        </span>
                        <span
                          class="slds-media__body"
                        >
                          <span
                            class="slds-listbox__option-text slds-listbox__option-text_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="Global Media"
                            >
                              Global Media
                            </span>
                          </span>
                          <span
                            class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="(905) 555-1212"
                            >
                              (905) 555-1212
                            </span>
                          </span>
                        </span>
                    </lightning-base-combobox-item>
                  </li>
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <lightning-base-combobox-item
                      aria-selected="false"
                      class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
                      data-item-id="input-90-4"
                      data-value="accountGlobalMedia"
                      id="input-90-4-90"
                      role="option"
                    >
                      #shadow-root(open)
                        <span
                          class="slds-media__figure"
                        >
                          <lightning-icon
                            class="slds-icon-standard-account slds-icon_container"
                          >
                            #shadow-root(open)
                              <lightning-primitive-icon>
                                #shadow-root(open)
                                  <svg
                                    aria-hidden="true"
                                    class="slds-icon slds-icon_small"
                                    data-key="account"
                                    focusable="false"
                                  >
                                    <use
                                      xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                    />
                                  </svg>
                              </lightning-primitive-icon>
                          </lightning-icon>
                        </span>
                        <span
                          class="slds-media__body"
                        >
                          <span
                            class="slds-listbox__option-text slds-listbox__option-text_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="Global Media"
                            >
                              Global Media
                            </span>
                          </span>
                          <span
                            class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="(905) 555-1212"
                            >
                              (905) 555-1212
                            </span>
                          </span>
                        </span>
                    </lightning-base-combobox-item>
                  </li>
                </ul>
                <ul
                  aria-label="Group 2"
                  role="group"
                >
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <div
                      class="slds-media slds-listbox__option slds-listbox__option_plain slds-media_small"
                      role="presentation"
                    >
                      <h3
                        class="slds-text-title_caps"
                        role="presentation"
                        title="Group 2"
                      >
                        Group 2
                      </h3>
                    </div>
                  </li>
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <lightning-base-combobox-item
                      aria-selected="true"
                      class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity slds-has-focus"
                      data-item-id="input-90-5"
                      data-value="accountGlobalMedia"
                      id="input-90-5-90"
                      role="option"
                    >
                      #shadow-root(open)
                        <span
                          class="slds-media__figure"
                        >
                          <lightning-icon
                            class="slds-icon-standard-account slds-icon_container"
                          >
                            #shadow-root(open)
                              <lightning-primitive-icon>
                                #shadow-root(open)
                                  <svg
                                    aria-hidden="true"
                                    class="slds-icon slds-icon_small"
                                    data-key="account"
                                    focusable="false"
                                  >
                                    <use
                                      xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                    />
                                  </svg>
                              </lightning-primitive-icon>
                          </lightning-icon>
                        </span>
                        <span
                          class="slds-media__body"
                        >
                          <span
                            class="slds-listbox__option-text slds-listbox__option-text_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="Global Media"
                            >
                              Global Media
                            </span>
                          </span>
                          <span
                            class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="(905) 555-1212"
                            >
                              (905) 555-1212
                            </span>
                          </span>
                        </span>
                    </lightning-base-combobox-item>
                  </li>
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <lightning-base-combobox-item
                      aria-selected="false"
                      class="slds-media slds-listbox__option slds-media_center slds-media_small slds-listbox__option_plain"
                      data-item-id="input-90-6"
                      data-value="actionSearchAdvanced"
                      id="input-90-6-90"
                      role="option"
                    >
                      #shadow-root(open)
                        <span
                          class="slds-media__figure slds-listbox__option-icon"
                        >
                          <lightning-icon
                            class="slds-icon-utility-search slds-icon_container"
                          >
                            #shadow-root(open)
                              <lightning-primitive-icon>
                                #shadow-root(open)
                                  <svg
                                    aria-hidden="true"
                                    class="slds-icon slds-icon-text-default slds-icon_x-small"
                                    data-key="search"
                                    focusable="false"
                                  >
                                    <use
                                      xlink:href="/assets/icons/utility-sprite/svg/symbols.svg#search"
                                    />
                                  </svg>
                              </lightning-primitive-icon>
                          </lightning-icon>
                        </span>
                        <span
                          class="slds-media__body"
                        >
                          <span
                            class="slds-truncate"
                            title="Advanced Search..."
                          >
                            Advanced Search...
                          </span>
                        </span>
                    </lightning-base-combobox-item>
                  </li>
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <lightning-base-combobox-item
                      aria-selected="false"
                      class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
                      data-item-id="input-90-7"
                      data-value="accountGlobalMedia"
                      id="input-90-7-90"
                      role="option"
                    >
                      #shadow-root(open)
                        <span
                          class="slds-media__figure"
                        >
                          <lightning-icon
                            class="slds-icon-standard-account slds-icon_container"
                          >
                            #shadow-root(open)
                              <lightning-primitive-icon>
                                #shadow-root(open)
                                  <svg
                                    aria-hidden="true"
                                    class="slds-icon slds-icon_small"
                                    data-key="account"
                                    focusable="false"
                                  >
                                    <use
                                      xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                    />
                                  </svg>
                              </lightning-primitive-icon>
                          </lightning-icon>
                        </span>
                        <span
                          class="slds-media__body"
                        >
                          <span
                            class="slds-listbox__option-text slds-listbox__option-text_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="Global Media"
                            >
                              Global Media
                            </span>
                          </span>
                          <span
                            class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="(905) 555-1212"
                            >
                              (905) 555-1212
                            </span>
                          </span>
                        </span>
                    </lightning-base-combobox-item>
                  </li>
                  <li
                    class="slds-listbox__item"
                    role="presentation"
                  >
                    <lightning-base-combobox-item
                      aria-selected="false"
                      class="slds-media slds-listbox__option slds-media_center slds-listbox__option_entity"
                      data-item-id="input-90-8"
                      data-value="accountGlobalMedia"
                      id="input-90-8-90"
                      role="option"
                    >
                      #shadow-root(open)
                        <span
                          class="slds-media__figure"
                        >
                          <lightning-icon
                            class="slds-icon-standard-account slds-icon_container"
                          >
                            #shadow-root(open)
                              <lightning-primitive-icon>
                                #shadow-root(open)
                                  <svg
                                    aria-hidden="true"
                                    class="slds-icon slds-icon_small"
                                    data-key="account"
                                    focusable="false"
                                  >
                                    <use
                                      xlink:href="/assets/icons/standard-sprite/svg/symbols.svg#account"
                                    />
                                  </svg>
                              </lightning-primitive-icon>
                          </lightning-icon>
                        </span>
                        <span
                          class="slds-media__body"
                        >
                          <span
                            class="slds-listbox__option-text slds-listbox__option-text_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="Global Media"
                            >
                              Global Media
                            </span>
                          </span>
                          <span
                            class="slds-listbox__option-meta slds-listbox__option-meta_entity"
                          >
                            <span
                              class="slds-truncate"
                              title="(905) 555-1212"
                            >
                              (905) 555-1212
                            </span>
                          </span>
                        </span>
                    </lightning-base-combobox-item>
                  </li>
                </ul>
              </div>
            </div>
        </lightning-base-combobox>
      </div>
    </div>
</lightning-grouped-combobox>
`;
